@@ -1,5 +1,6 @@
 package com.k8s.cnapp.server.api.controller;
 
+import com.k8s.cnapp.server.alert.dto.AlertDto;
 import com.k8s.cnapp.server.alert.repository.AlertRepository;
 import com.k8s.cnapp.server.auth.domain.Tenant;
 import com.k8s.cnapp.server.auth.service.AuthService;
@@ -8,6 +9,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/alerts")
@@ -23,6 +26,7 @@ public class AlertViewApiController {
         return ResponseEntity.ok(alertRepository.findAll().stream()
                 .filter(a -> a.getTenant().equals(tenant))
                 .sorted((a1, a2) -> a2.getCreatedAt().compareTo(a1.getCreatedAt()))
-                .toList());
+                .map(AlertDto::new)
+                .collect(Collectors.toList()));
     }
 }
